<resources>
    <string name="app_name">CuadernoDeBitacoraSpotify</string>
    <string name="sign_in">Signed in</string>
    <string name="sign_out">Signed out</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="account_linking">Account Linking</string>
    <string name="field_required">Field required.</string>
    <string name="issue_dialog_fragment_title">What was the issue?</string>
    <string name="issue_dialog_fragment_hint">Write your issue</string>

    <!--Bottons-->
    <string name="log_out_text">Log Out</string>
    <string name="get_resources_text">Get Resources</string>
    <string name="add_order_text">Add Order</string>
    <string name="submit_order_text">Submit Order</string>
    <string name="delivered_order">Deliver Order</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="submit">Submit</string>


    <!--Columns Names-->
    <string name="column_author">Author</string>
    <string name="column_title">Title</string>
</resources>
