<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/list_columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/column_title"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/column_author"
            android:textAlignment="center" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_orders"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/list_columns"
        android:layout_marginTop="@dimen/icon_top_margin" />

    <Button
        android:id="@+id/deliver_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_orders"
        android:layout_alignParentStart="true"
        android:text="@string/delivered_order" />

    <Button
        android:id="@+id/submit_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_orders"
        android:layout_alignParentEnd="true"
        android:text="@string/submit_issue" />


</RelativeLayout>