<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/dialog_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/issue_dialog_fragment_title"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_fragment_title"
        android:layout_centerInParent="true"
        android:hint="@string/issue_dialog_fragment_hint" />

    <ImageButton
        android:id="@+id/issue_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/dialog_fragment_title"
        android:layout_toEndOf="@+id/edit_issue"
        android:background="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/submit_issue_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_issue"
        android:layout_centerInParent="true"
        android:text="@string/submit" />

</RelativeLayout>